changed font to match otsdaq web site

--- a/WebGUI/css/Desktop.css
+++ b/WebGUI/css/Desktop.css
@@ -9,7 +9,7 @@
 	-webkit-user-select: 	none;
 	-moz-user-select: 		none;
 	user-select:			none;
-	font-family: 'Donegal One', serif;		
+	font-family: 'Comfortaa', serif; /*'Donegal One', serif;*/		
     font-size: 20px;
 	outline: none;  /* to stop firefox selection*/	
 }
