--- a/WebGUI/css/MultiSelectBox.css
+++ b/WebGUI/css/MultiSelectBox.css
@@ -71,3 +71,13 @@
         color: #222;
         margin: 5px;
     }
+    
+    /*firefox seems to put an extra pixel of letter-spacing in bold words*/
+    @-moz-document url-prefix() {  /*target firefox*/
+    	b, th {
+    		letter-spacing: -1px;
+    	}
+    	h1, h2, h3, h4, h5, h6 {
+    		letter-spacing: -2px;
+    	}
+    }
