checkpoint. tree-view editing.. adding members to grouplinks is almost working

--- a/WebGUI/css/MultiSelectBox.css
+++ b/WebGUI/css/MultiSelectBox.css
@@ -26,7 +26,8 @@
     {
         display:none;
     }
-    .multiselectbox .mySelect .optionhighlighted
+    .multiselectbox .mySelect .optionhighlighted,
+	.multiselectbox .mySelect .optionhighlighted u
     {
         background:rgb(0,111,255);
         color:white;
