--- a/WebGUI/css/fonts.css
+++ b/WebGUI/css/fonts.css
@@ -1,32 +1,42 @@
 @font-face {
   font-family: 'Comfortaa';
+  font-weight: 300;
+  font-style: normal;
+  src: url('/WebPath/fonts/comfortaa/Comfortaa-Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Comfortaa';
   font-weight: 400;
   font-style: normal;
-  src: url('/WebPath/fonts/Comfortaa-regular/Comfortaa-regular.eot');
-  src: url('/WebPath/fonts/Comfortaa-regular/Comfortaa-regular.eot?#iefix') format('embedded-opentype'),
-       local('Comfortaa'),
-       local('Comfortaa-regular'),
-       url('/WebPath/fonts/Comfortaa-regular/Comfortaa-regular.woff2') format('woff2'),
-       url('/WebPath/fonts/Comfortaa-regular/Comfortaa-regular.woff') format('woff'),
-       url('/WebPath/fonts/Comfortaa-regular/Comfortaa-regular.ttf') format('truetype'),
-       url('/WebPath/fonts/Comfortaa-regular/Comfortaa-regular.svg#Comfortaa') format('svg');
+  src: url('/WebPath/fonts/comfortaa/Comfortaa-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Comfortaa';
+  font-weight: bold;
+  font-style: normal;
+  src: url('/WebPath/fonts/comfortaa/Comfortaa-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Comfortaa';
+  font-weight: 700;
+  font-style: normal;
+  src: url('/WebPath/fonts/comfortaa/Comfortaa-Bold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Donegal One';
   font-weight: 400;
   font-style: normal;
-  src: url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.eot');
-  src: url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.eot?#iefix') format('embedded-opentype'),
-       local('Donegal One'),
-       local('Donegal-One-regular'),
-       url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.woff2') format('woff2'),
-       url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.woff') format('woff'),
-       url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.ttf') format('truetype'),
-       url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.svg#DonegalOne') format('svg');
+  src: url('/WebPath/fonts/donegalone/DonegalOne-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Inconsolata';
   font-weight: 400;
   font-style: normal;
   src: url('/WebPath/fonts/inconsolata/Inconsolata-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Inconsolata';
+  font-weight: 700;
+  font-style: normal;
+  src: url('/WebPath/fonts/inconsolata/Inconsolata-Bold.ttf') format('truetype');
 }
