--- a/WebGUI/css/fonts.css
+++ b/WebGUI/css/fonts.css
@@ -27,6 +27,15 @@
   font-weight: 400;
   font-style: normal;
   src: url('/WebPath/fonts/donegalone/DonegalOne-Regular.ttf') format('truetype');
+  /*
+  src: url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.eot');
+  src: url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.eot?#iefix') format('embedded-opentype'),	
+         local('Donegal One'),
+         local('Donegal-One-regular'),
+         url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.woff2') format('woff2'),
+         url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.woff') format('woff'),
+         url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.ttf') format('truetype'),
+         url('/WebPath/fonts/Donegal-One-regular/Donegal-One-regular.svg#DonegalOne') format('svg');*/
 }
 @font-face {
   font-family: 'Inconsolata';
