--- a/WebGUI/css/MultiSelectBox.css
+++ b/WebGUI/css/MultiSelectBox.css
@@ -74,11 +74,13 @@
     }
     
     /*firefox seems to put an extra pixel of letter-spacing in bold words*/
-    @-moz-document url-prefix() {  /*target firefox*/
+    /* this seems to have been fixed by choosing the correct truetype font in font.css*/
+    /*target firefox*/
+    /*@-moz-document url-prefix() {  
     	b, th {
     		letter-spacing: -1px;
     	}
     	h1, h2, h3, h4, h5, h6 {
     		letter-spacing: -2px;
     	}
-    }
+    }*/
