--- a/WebGUI/css/MultiSelectBox.css
+++ b/WebGUI/css/MultiSelectBox.css
@@ -41,7 +41,7 @@
         padding:3px 0px 3px 0px;
     }
 
-    .multiselectbox .selectSearchBar img
+    .multiselectbox .selectSearchBar img, .multiselectbox a
     {
         cursor:pointer;
     }
