added desktop folder feature for managing multiple icons.

--- a/WebGUI/css/MultiSelectBox.css
+++ b/WebGUI/css/MultiSelectBox.css
@@ -20,6 +20,7 @@
     .multiselectbox .mySelect .myOption
     {
         padding:2px;
+        white-space: nowrap;
         cursor:pointer;
     }
     .multiselectbox .hidden
