checkpoint with config API. now can fully save modified tables.

--- a/WebGUI/css/ConfigurationAPI.css
+++ b/WebGUI/css/ConfigurationAPI.css
@@ -77,8 +77,8 @@
 			width: 				24px;
 			height: 			20px;
 			position:			absolute;
-			left: 				-100px;
-			top: 				0;
+			left: 				-100000px;
+			top: 				-100000px;
 		}
 		#ConfigurationAPI-popUpDialog-preloadImage-editIconHover {
 			background-image: 	url(/WebPath/images/windowContentImages/ConfigurationGUI-pencilEditHover.png);
