checkpoint working on bitmap, fixing bug that Alex and Ben found with apos in table cells

--- a/WebGUI/css/ConfigurationAPI.css
+++ b/WebGUI/css/ConfigurationAPI.css
@@ -85,5 +85,23 @@
 		}
 		
 		
+		/* bitmap CSS */
+		
+		#ConfigurationAPI-popUpDialog-bitmap, #ConfigurationAPI-popUpDialog-bitmap-overlay {
+			image-rendering: optimizeSpeed;             /* NO SMOOTHING, GIVE ME SPEED    */
+			image-rendering: -moz-crisp-edges;          /* Firefox                        */
+			image-rendering: pixelated; 				/* Chrome (and eventually Safari) */
+			image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+			cursor: pointer;
+		}
+		
+		
+		
+		
+		
+		
+		
+		
+		
 		
 		
