--- a/WebGUI/css/ConfigurationAPI.css
+++ b/WebGUI/css/ConfigurationAPI.css
@@ -162,7 +162,7 @@
 			border-radius: 5px;
 			padding: 5px;
 			white-space: nowrap;
-			z-index: 10; 
+			z-index: 10;			
 		}		
 		
 		.ConfigurationAPI-popUpDialog-bitmap-numbers-rowLeft div {
@@ -174,6 +174,15 @@
 		.ConfigurationAPI-popUpDialog-bitmap-numbers-colTop div,
 		.ConfigurationAPI-popUpDialog-bitmap-numbers-colBottom div{
 			text-align: center;
+		}
+		
+		.ConfigurationAPI-popUpDialog-bitmap-btnInput {
+			padding: 1px;
+		}
+
+		.ConfigurationAPI-popUpDialog-bitmap-colorSample {
+			border: 1px solid black;
+			border-radius: 3px;
 		}
 		
 		.ConfigurationAPI-popUpDialog-bitmap-number {
