--- a/WebGUI/css/ConfigurationGUI.css
+++ b/WebGUI/css/ConfigurationGUI.css
@@ -60,7 +60,7 @@
 		}
 		#SubSystemTable td, #SubSystemTable th {
 			background-color : rgb(226, 216, 216);	
-			white-space: pre-wrap;
+			white-space: pre; /*pre-wrap; was but not sure why.. pre seems to maintain text better*/
 		}
 		
 
