--- a/WebGUI/css/ConfigurationAPI.css
+++ b/WebGUI/css/ConfigurationAPI.css
@@ -192,7 +192,47 @@
 		}
 		
 		
+		.ConfigurationAPI-EditableField {
+			cursor: pointer;
+		}
 		
+		.ConfigurationAPI-EditableField .treeNode {
+			margin-left: 		30px;
+			float:				left;
+			position:			relative;
+		}
+
+		.ConfigurationAPI-EditableField .treeNode-Connection {
+			border-left: 		1px solid rgb(44, 44, 187);
+			border-bottom: 		1px solid rgb(44, 44, 187);
+			width: 				24px;
+			height:				17px; /* +1 for firefox */
+			margin-top:  		-7px;
+			position:			absolute;
+		}
+
+		.ConfigurationAPI-EditableField .treeNode-Value {			
+			float:				left;
+		}
+		
+
+		.ConfigurationAPI-EditableField .treeNode-Value-editIcon {			
+			background-image: 	url(/WebPath/images/windowContentImages/ConfigurationGUI-pencilEdit.png);
+			width: 				24px;
+			height: 			20px;
+			float: 				left;
+			border: 			0;
+			margin: 			-2px 0 -7px 10px;
+			display:			none;
+		}
+		.ConfigurationAPI-EditableField .treeNode-Value-editIcon:hover {
+			background-image: 	url(/WebPath/images/windowContentImages/ConfigurationGUI-pencilEditHover.png);
+			cursor: 			pointer;
+		}
+		
+		.ConfigurationAPI-EditableField-SelectedField {
+			background-color:red;
+		}
 		
 		
 		
