Minor fix for subset GUI display in small spaces.. (firefox does not force padding like chrome does)

--- a/WebGUI/css/ConfigurationAPI.css
+++ b/WebGUI/css/ConfigurationAPI.css
@@ -194,6 +194,8 @@
 		
 		.ConfigurationAPI-EditableField {
 			cursor: pointer;
+			white-space: nowrap;
+			width: 10000px; /* big number so that nowrap works even for small spaces */
 		}
 		
 		.ConfigurationAPI-EditableField .treeNode {
