Added refresh button to Desktop windows

--- a/WebGUI/css/Desktop.css
+++ b/WebGUI/css/Desktop.css
@@ -275,6 +275,17 @@
 		overflow: hidden;
 		color: #0f2269;
 	}
+
+        #Desktop .DesktopWindowButtonGraphicRefresh {
+                width: 12px;
+                height: 12px;
+                margin: 3px 0 0 3px;
+                color: #0f2269;
+                /*font-family: arial; this is displaying differently in chrome and firefox .. so trying different font */
+                font-family: 'Comfortaa', serif;
+                font-size: 18px;
+                line-height: 16px;
+        }
 	
 	#Desktop .DesktopWindowButtonGraphicMin {
 		width: 11px;
