minor cleanup arising from demonstration to Mandy

--- a/WebGUI/css/Desktop.css
+++ b/WebGUI/css/Desktop.css
@@ -199,6 +199,10 @@
 		cursor: pointer;
 	}
 	
+	#Desktop .DesktopIcons-folderDiv {
+		z-index: 10000;
+	}
+	
 	/* for mouse over highlighting */
 	#Desktop .DesktopIcons-folderDiv .myOption:hover {
 		background-color : rgb(213, 227, 245);
