--- a/WebGUI/css/ConfigurationAPI.css
+++ b/WebGUI/css/ConfigurationAPI.css
@@ -219,13 +219,13 @@
 			width: 10000px; /* big number so that nowrap works even for small spaces */
 		}
 		
-		.ConfigurationAPI-EditableField .treeNode {
+		.ConfigurationAPI-EditableField .editableFieldNode {
 			margin-left: 		30px;
 			float:				left;
 			position:			relative;
 		}
 
-		.ConfigurationAPI-EditableField .treeNode-Connection {
+		.ConfigurationAPI-EditableField .editableFieldNode-Connection {
 			border-left: 		1px solid rgb(44, 44, 187);
 			border-bottom: 		1px solid rgb(44, 44, 187);
 			width: 				24px;
@@ -234,12 +234,12 @@
 			position:			absolute;
 		}
 
-		.ConfigurationAPI-EditableField .treeNode-Value {			
+		.ConfigurationAPI-EditableField .editableFieldNode-Value {			
 			float:				left;
 		}
 		
 
-		.ConfigurationAPI-EditableField .treeNode-Value-editIcon {			
+		.ConfigurationAPI-EditableField .editableFieldNode-Value-editIcon {			
 			background-image: 	url(/WebPath/images/windowContentImages/ConfigurationGUI-pencilEdit.png);
 			width: 				24px;
 			height: 			20px;
@@ -248,7 +248,7 @@
 			margin: 			-2px 0 -7px 10px;
 			display:			none;
 		}
-		.ConfigurationAPI-EditableField .treeNode-Value-editIcon:hover {
+		.ConfigurationAPI-EditableField .editableFieldNode-Value-editIcon:hover {
 			background-image: 	url(/WebPath/images/windowContentImages/ConfigurationGUI-pencilEditHover.png);
 			cursor: 			pointer;
 		}
