--- a/WebGUI/css/ConfigurationGUI.css
+++ b/WebGUI/css/ConfigurationGUI.css
@@ -62,11 +62,14 @@
 		
 
 		#SubSystemTable {
-			background-color : rgb(241, 231, 231);			
+			background-color : rgb(210, 193, 193);;
 		}
 		#SubSystemTable td, #SubSystemTable th {
 			background-color : rgb(226, 216, 216);	
 			white-space: pre; /* was pre-wrap; but not sure why.. pre seems to maintain text better*/
+		}
+		#SubSystemTable {
+			background-color : rgb(210, 193, 193); /*chrome does not color table unless after the td/th*/
 		}
 		
 
