--- a/WebGUI/css/CodeEditor.css
+++ b/WebGUI/css/CodeEditor.css
@@ -120,9 +120,12 @@
 		    background-color: 		rgb(239, 239, 239);
 		    color: 					rgb(170, 171, 173);
 		}
+		.textEditorLastSave {
+		    color: 					rgb(170, 171, 173);
+		}
 
 		.directoryNav {
-			background-color: 		yellow;
+			background-color: 		rgb(241, 243, 247);
 			position:				absolute;
 			overflow:				auto;
 			
@@ -133,16 +136,16 @@
 			
 		}
 		.directoryNav * {
-			color:					black;
+			color:					rgb(109, 108, 108);
 		}
 		.dirNavPath {
 			color:					black;
 		}
 		.dirNavFolder {
-			color:					red;
+			color:					rgb(106, 134, 245);
 		}
 		.dirNavFile {
-			color:					black;
+			color:					rgb(109, 108, 108);
 		}
 
 		
