Added FE Priority and propogated iteration index for the configure transition to repeatedly call configure for FE interfaces to coordinate interleaved operations.

--- a/WebGUI/css/SmartLaunch.css
+++ b/WebGUI/css/SmartLaunch.css
@@ -112,7 +112,7 @@
 		#runStatusDiv {
 			text-align:left;
 		
-			padding: 20px;
+			padding: 20px 0px 20px 20px;
 			color: rgb(136, 102, 102);			
 		}
 		
