--- a/WebGUI/css/CodeEditor.css
+++ b/WebGUI/css/CodeEditor.css
@@ -182,9 +182,9 @@
 			height:					100%;
 			
 			/*inner shadow*/
-		   -moz-box-shadow:    inset 0 0 10px #000000;
-		   -webkit-box-shadow: inset 0 0 10px #000000;
-		   box-shadow:         inset 0 0 10px #000000;
+		   -moz-box-shadow:    		inset 0 0 10px #000000;
+		   -webkit-box-shadow: 		inset 0 0 10px #000000;
+		   box-shadow:         		inset 0 0 10px #000000;
 		}
 		.textEditor * {
 			color:					black;
@@ -199,7 +199,13 @@
 		.textEditorBody {
 			position:				absolute;
 			overflow:				auto;
+			
+			/*inner shadow*/
+		   -moz-box-shadow:    		inset 0 0 10px #000000;
+		   -webkit-box-shadow: 		inset 0 0 10px #000000;
+		   box-shadow:         		inset 0 0 10px #000000;
 		}
+		
 		.editableBox {
 			white-space: 			pre; /*nowrap;*/
 			tab-size: 				4;
@@ -214,7 +220,7 @@
 		    text-align: 			right;
 		    margin: 				0px 6px 0 0;
 		    padding: 				0px 7px 0 7px;
-		    background-color: 		rgb(239, 239, 239);
+		    /*background-color: 		rgb(239, 239, 239);*/
 		    color: 					rgb(170, 171, 173);
 		}
 		.textEditorLastSave {
