standardizing FTBF firefox styles css

--- a/WebGUI/css/ots.css
+++ b/WebGUI/css/ots.css
@@ -31,6 +31,7 @@
 	input, select {
 		padding: 			1px;
 		cursor: 			pointer;
+		font-size:			11px;
 	}	
 		
 	/*firefox seems to put an extra pixel of letter-spacing in bold words*/
