multi-threaded state machine command broadcasting from Gateway fully functional.

--- a/WebGUI/css/Desktop.css
+++ b/WebGUI/css/Desktop.css
@@ -138,7 +138,7 @@
 	
 	#Desktop .DesktopDashboard-button-left {
 		float: left;
-		margin: 6px 0 0 20px;
+		margin: 6px 0 6px 20px;
 	}
 	
 	#Desktop .DesktopDashboard-button-right {
